# Nakagawasm

./: README.adoc  README.md
_archived/: README.adoc
_archived/multi-runner/: Cargo.toml
_archived/multi-runner/src/: main.rs
_archived/scripts/: file_gen.py  graph.py  requirements.txt  sanpuzu.py
_archived/single-sched/: Cargo.toml  test.cwasm  test.wasm
_archived/single-sched/crates/executor/: build.rs
_archived/single-sched/crates/manager/: build.rs
_archived/single-sched/crates/manager-v2/: Cargo.toml
_archived/single-sched/log/2022-03-11T07:38:47.865184196+00:00/: mem.csv
_archived/single-sched/log/2022-03-14T07:06:57.067907361+00:00/: mem.csv
_archived/single-sched/log/2022-03-14T07:37:34.334921327+00:00/: mem.csv
_archived/single-sched/static/foo/: index.html
_archived/wasi-fileserver/: Cargo.toml  Makefile
_archived/wasi-fileserver/src/: lib.rs
_archived/wasm-mem-sched/: run.toml
_archived/wasm-mem-sched/executor/: Cargo.toml
_archived/wasm-mem-sched/executor/src/: instance.rs  main.rs  register.rs
_archived/wasm-test-app/: README.md
_archived/workdir/: config.toml  e.wasm
_sample/: README.adoc
_sample/reactor-sample/: Cargo.toml
_sample/redis-sample/: Cargo.toml  docker-compose.yml
_sample/wasm-exec-sample/: Cargo.toml  README.md
base-expr-workdir/: .gitignore  event.csv  graph.ipynb  main.py  memory.csv  req.bash  requirements.txt
crawler/: Cargo.toml
crawler/src/: main.rs
data/: cnative-alloced.txt  cnative.txt  cwasm-alloced.txt  cwasm.txt
imageproc-sample/: Cargo.toml  README.md
imageproc-sample/src/: main.rs
instance-manager/: Cargo.toml
instance-manager/src/: domain.rs  driver.rs  main.rs  repository.rs  service.rs
instance-manager/src/domain/: instance.rs  metrics.rs  worker.rs
multi-runner/: Cargo.toml
multi-runner/src/: main.rs
proxy/: Cargo.toml
proxy-with-wasm/: Cargo.toml  directly.csv  test.ipynb  using_proxy.csv
proxy-with-wasm/src/: main.rs
proxy/src/: main.rs
reactor-sample/: README.adoc
reactor-sample/src/: lib.rs
redis-sample/: Cargo.toml
redis-sample/src/: main.rs
scripts/: .gitignore  file_gen.py  graph.py  requirements.txt  sanpuzu.py  solve.py  stat.py
server-contents-setup/: .gitignore  README.adoc  all-post-links.txt  all-posts.html  fiximgpath.py  run.sh  size.py  staticgen.py
simple-wagi/: Cargo.toml
simple-wagi/src/: main.rs
single-sched/: Cargo.toml  config.toml
single-sched/crates/executor/: Cargo.toml
single-sched/crates/executor/src/: main.rs  wasi.rs
single-sched/crates/manager/: Cargo.toml
single-sched/crates/manager-v2/src/: main.rs
single-sched/crates/manager/src/: config.rs  main.rs
single-sched/log/2022-02-11T19:28:54.484303600+09:00/: mem.csv
single-sched/log/2022-02-11T19:29:58.337304800+09:00/: mem.csv
single-sched/log/2022-02-11T19:32:02.894096900+09:00/: mem.csv
single-sched/log/2022-02-11T19:54:56.807861900+09:00/: mem.csv
single-sched/log/2022-02-11T20:06:13.740210100+09:00/: mem.csv
single-sched/proto/: cmd.proto
single-sched/static/: index.html
wasm-exec/: Cargo.toml
wasm-exec-sample/src/: main.rs
wasm-exec/src/: main.rs
wasm-mem-sched/: Cargo.toml  run.toml
wasm-mem-sched/executor/: Cargo.toml
wasm-mem-sched/executor/src/: cli.rs  config.rs  handler.rs  instance.rs  main.rs  pod.rs
wasm-test-app/: Cargo.toml  README.md
wasmedge-app/: Cargo.toml  README.adoc
wasmedge-app/.cargo/: config.toml
wasmedge-app/src/: main.rs
wit-bindgen-sample/: Cargo.toml
wit-bindgen-sample/src/: main.rs
wit-bindgen-sample/wit/: http.wit
wit-test/: Cargo.toml
wit-test/guest/: Cargo.toml
wit-test/guest/src/: lib.rs
wit-test/host/: Cargo.toml
wit-test/host/src/: main.rs
wit-test/wits/: proxy.wit
workdir/log/6000/2022-02-14T12:59:46.901841522+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.902004159+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.910130745+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.916965064+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.934901794+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.939813754+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.940690669+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.947004795+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.953618957+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.966979712+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.976649681+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.987917996+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.990554031+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.996813174+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:46.998564429+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:47.006122172+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:47.014502026+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:47.015312666+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:47.023845399+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:47.026452048+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:47.041647575+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:47.046519268+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:47.058669599+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:47.063189939+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:47.070493693+09:00/: mem.csv
workdir/log/6000/2022-02-14T12:59:47.081971924+09:00/: mem.csv
workdir/log/6859/2022-02-14T14:22:56.408469775+09:00/: mem.csv
workdir/log/6859/2022-02-14T14:22:56.408525049+09:00/: mem.csv
workdir/log/6859/2022-02-14T14:22:56.408561758+09:00/: mem.csv
workdir/log/6859/2022-02-14T14:22:56.408566767+09:00/: mem.csv
workdir/log/6859/2022-02-14T14:22:56.408569052+09:00/: mem.csv
workdir/log/6859/2022-02-14T14:22:56.408597766+09:00/: mem.csv
workdir/log/6859/2022-02-14T14:22:56.408633483+09:00/: mem.csv
workdir/log/6859/2022-02-14T14:22:56.408635677+09:00/: mem.csv
workdir/log/6859/2022-02-14T14:22:56.408664441+09:00/: mem.csv
workdir/log/6859/2022-02-14T14:22:56.408697423+09:00/: mem.csv
(+118 files in other folders)
