[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-recursion = "1.0.0"
clap = { version = "3.1.18", features = ["derive"] }
futures = "0.3.21"
reqwest = "0.11.10"
time = "0.3.9"
tl = "0.7.5"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
