[package]
name = "instance-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
dotenv = "0.15.0"
once_cell = "1.10.0"
regex = "1.5.5"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
ulid = { version = "0.5.0", features = ["serde"] }
