[package]
name = "instance-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
async-trait = "0.1.57"
csv = "1.1.6"
dotenv = "0.15.0"
once_cell = "1.13.0"
regex = "1.6.0"
serde = { version = "1.0.141", features = ["derive"] }
time = { version = "0.3.12", features = ["serde"] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
ulid = { version = "1.0.0", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }
