[package]
name = "proxy-with-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
hyper-reverse-proxy = "0.5.1"
tokio = { version = "1.20.1", features = ["full"] }
