[package]
name = "redis-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono =  "0.4"
redis = { version = "0.21", features = ["tokio-comp"] }
tokio = { version = "1.16", features = ["full"] }
