[package]
name = "redis-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
r2d2 = "0.8"
redis = { version = "0.21", features = ["r2d2", "tokio-comp"] }
tokio = { version = "1.16", features = ["full"] }
