[package]
name = "wasm-exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3.19"
tokio = { version = "1", features = ["full"] }
wasmtime = "0.32.0"
wasmtime-wasi = "0.32.0"
