[package]
name = "wasm-exec"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wasmtime = "0.32"
wasmtime-wasi = "0.32"
