[package]
name = "wasmedge-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httpcodec = "0.2.3"
bytecodec = "0.4.15"
wasmedge_wasi_socket = {git = "https://github.com/second-state/wasmedge_wasi_socket.git"}
httparse = "1.7.1"
urlencoding = "2.1.0"
