[package]
name = "wit-bindgen-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"] }
socket2 = "0.4"
tokio = { version = "1", features = ["full"] }
wasmtime = "0.34"
wasmtime-wasi = "0.34"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2f46ce4cc072107153da0cefe15bdc69aa5b84d0" }
