[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
clap = { version = "3.0", features = ["derive"]}
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.15", features = ["full"] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }