[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "3.0", features = ["derive"]}
futures = "0.3"
once_cell = "1.9"
regex = "1.5"
sha2 = "0.10"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.16", features = ["full"]}
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = {version = "0.8", features = ["serde", "v4"]}
