[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen.git", tag = "v0.2.0" }
wasmtime-wasi = "0.39.1"
