[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
chrono = "0.4.22"
cookie = "0.16.0"
hyper = { version = "0.14.20", features = ["full"] }
hyper-reverse-proxy = "0.5.1"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen.git", tag = "v0.2.0" }
wasmtime-wasi = "0.39.1"
