[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
tonic = "0.6"
prost = "0.9"
prost-types = "0.9.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wasmtime = "0.33"
wasmtime-wasi = "0.33"
wasi-experimental-http-wasmtime = "0.8.0"

[build-dependencies]
tonic-build = "0.6"
