[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
csv = "1.1"
futures = "0.3"
once_cell = "1.9"
tonic = "0.6"
prost = "0.9"
prost-types = "0.9.0"
regex = "1.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.6"
